--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
   path_provider: ^2.1.5
+  flutter_slidable: ^3.1.2
 
 dev_dependencies:
   flutter_test:
